@@ -12,6 +12,7 @@
 - Press P in city screen to see AI point value for each buildable improvement
 - Warn in case perfume target doesn't match any improvement name
 - Fix tile coords replacing resource name in the info box on the Steam version
+- Proper movement check for replacement army inclusion criteria
 
 * RELEASE 8
 - Stack fortify, upgrade, and disband
